<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.unal.inventorify.activities.product.NewProductActivity">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image_content_description"
        app:layout_constraintBottom_toTopOf="@+id/productNameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/productCostSpinner"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:entries="@array/currencies"
        app:layout_constraintLeft_toRightOf="@+id/productCostEditText"
        app:layout_constraintTop_toBottomOf="@+id/productSalePriceSpinner" />

    <EditText
        android:id="@+id/productCostEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/product_cost_tooltip"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSalePriceEditText" />

    <EditText
        android:id="@+id/productGuaranteeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/product_guarantee_tooltip"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productCostEditText" />

    <Spinner
        android:id="@+id/productGuaranteeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:entries="@array/guarantees"
        app:layout_constraintLeft_toRightOf="@+id/productCostEditText"
        app:layout_constraintStart_toEndOf="@+id/productGuaranteeEditText"
        app:layout_constraintTop_toBottomOf="@+id/productCostSpinner" />

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/product_name_tooltip"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="saveProduct"
        android:text="@string/new_product_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/productBarcodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/product_barcode_tooltip"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameEditText"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/newBarcodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/productBarcodeEditText"
        app:layout_constraintLeft_toRightOf="@+id/productBarcodeEditText"
        android:layout_marginStart="8dp"
        android:onClick="launchBarcodeScanner"/>

    <EditText
        android:id="@+id/productQuantityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/product_quantity_tooltip"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productBarcodeEditText"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/productSalePriceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/product_saleprice_tooltip"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productQuantityEditText"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/productSalePriceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="296dp"
        android:entries="@array/currencies"
        app:layout_constraintLeft_toRightOf="@+id/productSalePriceEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="takePhoto"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/productImageView"
        app:layout_constraintRight_toRightOf="@+id/productImageView"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:focusable="true" />

</android.support.constraint.ConstraintLayout>
